syntax = "proto3";

option csharp_namespace = "YourApp.Grpc";

package product;

service ProductService {
  rpc GetProductInfo (ProductRequest) returns (ProductReply);
}

message ProductRequest {
  string productId = 1;
}

message ProductReply {
  string name = 1;
  int32 stock = 2;
}